# mpi4py_with_rsmpi

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml
mpi4py_with_rsmpi/: __init__.py
src/: lib.rs
